--- a/woodworking.html
+++ b/woodworking.html
@@ -77,41 +77,6 @@
 					<li>
                         <a href="faq.html">FAQ</a>
                     </li>
-                    <!-- nav bar for blog and other pages
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="blog-home-1.html">Blog Home 1</a>
-                            </li>
-                            <li>
-                                <a href="blog-home-2.html">Blog Home 2</a>
-                            </li>
-                            <li>
-                                <a href="blog-post.html">Blog Post</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Other Pages <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li>
-                                <a href="full-width.html">Full Width Page</a>
-                            </li>
-                            <li>
-                                <a href="sidebar.html">Sidebar Page</a>
-                            </li>
-                            <li>
-                                <a href="faq.html">FAQ</a>
-                            </li>
-                            <li>
-                                <a href="404.html">404</a>
-                            </li>
-                            <li>
-                                <a href="pricing.html">Pricing Table</a>
-                            </li>
-                        </ul>
-                    </li> -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -138,30 +103,25 @@
         <!-- Portfolio Item Row -->
         <div class="row">
 
-            <div class="col-md-8 col-lg-6">
+            <div class="col-md-8 col-lg-5">
                 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-						<li data-target="#carousel-example-generic" data-slide-to="3"></li>
-						<li data-target="#carousel-example-generic" data-slide-to="4"></li>
                     </ol>
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="images/woodworking1.jpg" alt="">
+                            <img class="img-responsive" src="images/_mg_16952.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/woodworking2.jpg" alt="">
+                            <img class="img-responsive" src="images/_mg_16892.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/woodworking3.jpg" alt="">
-                        </div>
-						<div class="item">
-                            <img class="img-responsive" src="images/woodworking4.jpg" alt="">
+                            <img class="img-responsive" src="images/_mg_16932.jpg" alt="">
                         </div>
                     </div>
 
