--- a/3d-printing.html
+++ b/3d-printing.html
@@ -147,8 +147,10 @@
 
             <div class="col-md-4 col-lg-7">
                 <h3>We are proud to offer large scale 3D printing!</h3>
-                <p>We use Stacker S4 3D printers for our big and small prints. These are very versatile and reliable printers for small scale production runs, large part printing and quick prototyping. Stacker is made in the USA and these printers are truly industrial grade 3D printers that are affordable, accurate and reliable.</p>
-                <p>At Tecboy Labs, we specialize in the creation of highly accurate 3d printed parts exact to your standards. Our customers demand the highest quality, and with our industrial 3D printers, we can deliver your items in nearly any size, color and even material!</p>
+                <P>We use Stacker S4 3D printers for our big and small prints. These are very versatile and reliable printers for small scale production runs, large part printing and quick prototyping. Stacker is made in the USA and these printers are truly industrial grade 3D printers that are affordable, accurate and reliable.</p>
+				<p>At Tecboy Labs, we specialize in the creation of highly accurate 3d printed parts, exact to your standards. Our customers demand the highest quality, and with our industrial 3D printers, we can deliver your items in nearly any size, color and even utilizing various materials, such as carbon fiber!</p>
+				<p>From small scale figurines to large jigs and fixtures, we can design and 3d print it for you. If you have a file that you downloaded or created yourself and don’t know how to get it printed, please contact us as we can print it for you!</p>
+				
             </div>
 
         </div>
