--- a/laser-engraving.html
+++ b/laser-engraving.html
@@ -129,10 +129,10 @@
                             <img class="img-responsive" src="images/laserengraving2.JPG" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/laserengraving3.JPG" alt="">
+                            <img class="img-responsive" src="images/Laser_1.JPG" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/laserengraving4.jpg" alt="">
+                            <img class="img-responsive" src="images/Laser_2.jpg" alt="">
                         </div>
 						<div class="item">
                             <img class="img-responsive" src="images/Laser_4.jpg" alt="">
