--- a/cnc.html
+++ b/cnc.html
@@ -112,15 +112,23 @@
                     <ol class="carousel-indicators">
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+						<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+						<li data-target="#carousel-example-generic" data-slide-to="3"></li>
                     </ol>
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="images/cnc1.jpg" alt="">
+                            <img class="img-responsive" src="images/cnc-1.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="images/cnc2.jpg" alt="">
+                            <img class="img-responsive" src="images/cnc-2.jpg" alt="">
+                        </div>
+						<div class="item">
+                            <img class="img-responsive" src="images/cnc-3.jpg" alt="">
+                        </div>
+						<div class="item">
+                            <img class="img-responsive" src="images/cnc-4.jpg" alt="">
                         </div>
                     </div>
 
